# .xmonad

./: .gitignore  Makefile  conkyrc  hie.yaml  stack.yaml  xmonad.hs
xmonad-config/: xmonad-config.cabal
xmonad-config/app/: xmonad.hs
